Work on passing data between view controller. Didn't work. Added stop func to app and reset

--- a/freedomeGameProject/freedomeGameProject/Base.lproj/Main.storyboard
+++ b/freedomeGameProject/freedomeGameProject/Base.lproj/Main.storyboard
@@ -27,6 +27,31 @@
                                     <segue destination="0sy-0J-edF" kind="presentation" id="246-ZX-XZG"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="deB-6v-55y" customClass="jumperDraw">
+                                <rect key="frame" x="20" y="82" width="374" height="780"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EiX-7b-4u7">
+                                        <rect key="frame" x="281" y="4" width="85" height="36"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ogg-ib-xGd">
+                                        <rect key="frame" x="148" y="571" width="79" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Play Again?"/>
+                                        <connections>
+                                            <action selector="fun_reset:" destination="deB-6v-55y" eventType="touchUpInside" id="39B-5M-Bbi"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <connections>
+                                    <outlet property="currentScore" destination="EiX-7b-4u7" id="27T-gY-8UY"/>
+                                    <outlet property="resetButton" destination="ogg-ib-xGd" id="Aj8-c9-nyg"/>
+                                </connections>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CTr-ZR-klz">
                                 <rect key="frame" x="314" y="44" width="80" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -34,13 +59,9 @@
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Scoreboard"/>
                                 <connections>
-                                    <segue destination="FUo-Bo-nd7" kind="presentation" id="R7F-9Y-fh3"/>
+                                    <segue destination="FUo-Bo-nd7" kind="presentation" identifier="passSegue" id="u67-gi-1bd"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="deB-6v-55y" customClass="jumperDraw">
-                                <rect key="frame" x="20" y="82" width="374" height="780"/>
-                                <color key="backgroundColor" systemColor="systemTealColor"/>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -74,6 +95,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Jump back and forth between buildings, and dodge falling boxes. " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXp-Rc-2vy">
+                                <rect key="frame" x="60" y="96" width="295" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="NdI-Yu-Q90"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -81,13 +109,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aS0-vb-7hY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-659" y="277"/>
+            <point key="canvasLocation" x="-705.79710144927537" y="648.21428571428567"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="33K-0s-1wT">
             <objects>
                 <viewController id="FUo-Bo-nd7" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="TxF-qm-oFN">
+                    <view key="view" contentMode="scaleToFill" id="TxF-qm-oFN" customClass="ScoreboardViewController">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -98,16 +126,27 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kd3-BH-yYE">
+                                <rect key="frame" x="142" y="108" width="122" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="CmI-fk-Zec"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <connections>
+                            <outlet property="sbLabel" destination="Kd3-BH-yYE" id="mQT-yX-ZAT"/>
+                        </connections>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RZL-4c-3xQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="716" y="154"/>
+            <point key="canvasLocation" x="769.56521739130437" y="418.52678571428572"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
